@@ -173,7 +173,7 @@ next_finaud_decision ENUM('YES','NO') DEFAULT 'NO' NOT NULL ,
 state_num INT NOT NULL DEFAULT 0 ,
 suspended_jobs ENUM('YES','NO') DEFAULT 'NO' NOT NULL ,
 scheduler_priority INT UNSIGNED NOT NULL DEFAULT 0 ,
-cpuset INT UNSIGNED NOT NULL DEFAULT 0 ,
+cpuset VARCHAR( 255 ) NOT NULL DEFAULT "0" ,
 besteffort ENUM('YES','NO') DEFAULT 'YES' NOT NULL ,
 deploy ENUM('YES','NO') DEFAULT 'NO' NOT NULL ,
 expiry_date INT UNSIGNED NOT NULL ,
