@@ -292,7 +292,7 @@ CREATE TABLE resources (
   state_num integer NOT NULL default '0',
   suspended_jobs varchar(3) check (suspended_jobs in ('YES','NO')) NOT NULL default 'NO',
   scheduler_priority integer NOT NULL default '0',
-  cpuset integer NOT NULL default '0',
+  cpuset varchar(255) NOT NULL default '0',
   besteffort varchar(3) check (besteffort in ('YES','NO')) NOT NULL default 'YES',
   deploy varchar(3) check (deploy in ('YES','NO')) NOT NULL default 'NO',
   expiry_date integer NOT NULL default '0',
