@@ -1,5 +1,9 @@
 
 ALTER TABLE resources ADD drain varchar(3) check (drain in ('YES','NO')) NOT NULL default 'NO';
+ALTER TABLE resources ALTER COLUMN cpuset DROP DEFAULT,
+                      ALTER COLUMN cpuset TYPE varchar(255),
+                      ALTER COLUMN cpuset SET NOT NULL,
+                      ALTER COLUMN cpuset SET default '0';
 
 -- Update the database schema version
 DELETE FROM schema;
