@@ -44,11 +44,15 @@ version 2.5.4:
              AND on the number of running jobs.
   - [runner] add runner bipbip processes in the bipbip_laucher in Almighty.
   - [database] replace the field "maintenance" by "drain".
-               So the administrator can disable resource without killing
+               So the administrator can disable resources without killing
                current jobs by:
                     oarnodesetting -h n12 -p drain=YES
                ATTENTION: the admission rule with "maintenance" must be
                           changed with the "drain" keyword.
+  - [cpuset] cpuset resources filed is now varchar.
+             It is now possible to specify several core id in 1 cpuset field
+             like:
+                1+4+8
 
 version 2.5.3:
 --------------
